--- a/assets/css/_constants.scss
+++ b/assets/css/_constants.scss
@@ -19,3 +19,8 @@ $color18: #5b5e66;
 $color19: #eeeeee;
 $color20: rgba(255, 195, 44, 0.4);
 $color21: #fffbef;
+$color22: #f5f5f5;
+$color23: #01c58d;
+$color24: #effffa;
+$color25: rgba(255, 195, 44, 0.12);
+$color26: #fafbfc;
